@@ -19,202 +19,210 @@ class BaseGraph(BrowserView):
         """ BaseGraph Init
         """
         super(BaseGraph, self).__init__(context, request)
-        self.pt_relations = getToolByName(self.context, 'portal_relations')
-        self.graph_res = PyGraph()
+        self._tool = None
+        self._bad_relations = set()
+        self._bad_content = set()
+        self._graph = None
+    #
+    # Read-only properties
+    #
+    @property
+    def bad_relations(self):
+        """ Bad relations
+        """
+        return self._bad_relations
+
+    @property
+    def bad_content(self):
+        """ Bad content
+        """
+        return self._bad_content
 
     @property
     def graph(self):
         """ Generate pydot.Graph
         """
-        graph_res = self.graph_res
-        graph_string = graph_res.to_string()
-        if graph_string == "digraph G {\n}\n":
-            self.markBrokenRelations()
-            graph_res = self.graph_res
-        # we need to have an empty PyGraph object on graph_res otherwise when
-        # ran on the same object it misses results when new restrictions are
-        # added to relations tool
-        self.graph_res = PyGraph()
-        return graph_res
-
-    def image(self):
+        if self._graph is None:
+            self._graph = PyGraph()
+        return self._graph
+    #
+    # Utils
+    #
+    @property
+    def tool(self):
+        """ Portal relations tool
+        """
+        if not self._tool:
+            self._tool = getToolByName(self.context, 'portal_relations')
+        return self._tool
+    #
+    # Public interface
+    #
+    def image(self, setHeader=True, **kwargs):
         """ Returns a PNG image
         """
-        image = queryUtility(IGraph, name=u'png')
-        raw = image(self.graph)
+        converter = queryUtility(IGraph, name=u'png')
+        raw = converter(self.graph)
 
-        self.request.response.setHeader('Content-Type', 'image/png')
+        if setHeader:
+            self.request.response.setHeader('Content-Type', 'image/png')
         return raw
 
-    def json(self):
+    def json(self, setHeader=True, **kwargs):
         """ Returns a JSON graph
         """
         converter = queryUtility(IGraph, name=u'json')
         raw = converter(self.graph)
 
-        self.request.response.setHeader('Content-Type', 'application/json')
+        if setHeader:
+            self.request.response.setHeader('Content-Type', 'application/json')
         return raw
 
-    def brokenRelationMessage(self, bad_content, bad_relations):
-        """ Broken relation portal status message
+    def dot(self, setHeader=True, **kwargs):
+        """ Return dotted graph
         """
-        return {u'relations': bad_relations, u'content': bad_content}
+        if setHeader:
+            self.request.response.setHeader('Content-Type', 'text/plain')
+        return self.graph.to_string()
 
-    def markBrokenRelations(self):
-        """ Base method which assignes a pydot.Graph for the graph method
-        """
-        self.graph_res = PyGraph()
+    def __call__(self, *args, **kwargs):
+        kwargs.update(self.request.form)
+        setHeader = kwargs.get('setHeader', True)
+
+        if self.__name__.endswith('.json'):
+            return self.json(setHeader)
+        elif self.__name__.endswith('.png'):
+            return self.image(setHeader)
+        return self.dot(setHeader)
+
 
 class RelationGraph(BaseGraph):
     """ Draw a graph for Relation
     """
-
-    def markBrokenRelations(self):
-        """ Construct graph and return message with info about broken
-        relations for RelationGraph if any errors are found
+    @property
+    def graph(self):
+        """ Construct graph and mark broken relations if any
         """
-        bad_relations = []
-        bad_content = []
-        bad_rel = ""
+        if self._graph is not None:
+            return self._graph
 
-        graph = PyGraph()
+        # Valid graph edge
+        self._graph = PyGraph()
+
         value_from = self.context.getField('from').getAccessor(self.context)()
-        nfrom = self.pt_relations.get(value_from)
+        nfrom = self.tool.get(value_from)
         if nfrom:
             node = queryAdapter(nfrom, INode)
-            graph.add_node(node())
+            self._graph.add_node(node())
+        else:
+            self._bad_content.add(value_from)
+            self._bad_relations.add(self.context.Title())
 
         value_to = self.context.getField('to').getAccessor(self.context)()
-        nto = self.pt_relations.get(value_to)
-        if not (value_from == value_to) and nto:
-            node = queryAdapter(nto, INode)
-            graph.add_node(node())
+        nto = self.tool.get(value_to)
+        if nto:
+            if (value_from != value_to):
+                node = queryAdapter(nto, INode)
+                self._graph.add_node(node())
+        else:
+            self._bad_content.add(value_to)
+            self._bad_relations.add(self.context.Title())
 
-        edge = queryAdapter(self.context, IEdge)
-        res = edge()
-        if res:
-            graph.add_edge(res)
-            self.graph_res = graph
-            return ""
+        edge = queryAdapter(self.context, IEdge)()
+        if edge:
+            self._graph.add_edge(edge)
 
-        if not nfrom:
-            bad_rel = value_from
-        if not nto:
-            bad_rel = value_to
-        relation = self.pt_relations[self.context.getId()]
-        if bad_rel and bad_rel not in bad_content:
-            bad_content.append(bad_rel)
-            bad_relations.append(relation.Title())
-            self.graph_res = graph
-            return self.brokenRelationMessage(bad_content, bad_relations)
+        return self._graph
 
 
 class ContentTypeGraph(BaseGraph):
     """ Draw a graph for ContentType
     """
 
-    def markBrokenRelations(self):
-        """ Construct graph and return message with info about broken
-        relations for ContentTypeGraph if any errors are found
+    @property
+    def graph(self):
+        """ Construct graph and mark broken relations if any
         """
-        bad_relations = []
-        bad_content = []
+        if self._graph is not None:
+            return self._graph
+
+        self._graph = PyGraph()
+
+        # This node
         name = self.context.getId()
         node = queryAdapter(self.context, INode)
-        graph = PyGraph()
-        graph.add_node(node())
-        tool = queryAdapter(self.context, IToolAccessor)
-        relations = tool.relations(proxy=False)
-        for relation in relations:
+        self._graph.add_node(node())
+
+        xtool = queryAdapter(self.context, IToolAccessor)
+        for relation in xtool.relations(proxy=False):
             field = relation.getField('to')
             value_from = field.getAccessor(relation)()
+
             field = relation.getField('from')
             value_to = field.getAccessor(relation)()
+
             if name == value_from:
-                nto = self.pt_relations.get(value_to)
-                if not (value_from == value_to
-                    ) and nto:
+                nto = self.tool.get(value_to)
+                if (value_from != value_to) and nto:
                     node = queryAdapter(nto, INode)
-                    graph.add_node(node())
-                edge = queryAdapter(relation, IEdge)
-                res = edge()
-                if res:
-                    graph.add_edge(res)
+                    self._graph.add_node(node())
+                edge = queryAdapter(relation, IEdge)()
+                if edge:
+                    self._graph.add_edge(edge)
                 else:
-                    if value_to not in bad_content:
-                        bad_content.append(value_to)
-                    bad_relations.append(relation.Title())
-                # if we don't continue when value_from == name
-                # then we will get a double "node-myX" -> "node-myX"
-                # graph entry when value_to is also equal to name
-                continue
+                    self._bad_content.add(value_to)
+                    self._bad_relations.add(relation.Title())
 
-            if name == value_to:
-                nfrom = self.pt_relations.get(value_from)
-                if not (value_from == value_to
-                    ) and nfrom:
+            elif name == value_to:
+                nfrom = self.tool.get(value_from)
+                if (value_from != value_to) and nfrom:
                     node = queryAdapter(nfrom, INode)
-                    graph.add_node(node())
-                edge = queryAdapter(relation, IEdge)
-                res = edge()
-                if res:
-                    graph.add_edge(res)
+                    self._graph.add_node(node())
+                edge = queryAdapter(relation, IEdge)()
+                if edge:
+                    self._graph.add_edge(edge)
                 else:
-                    if value_from not in bad_content:
-                        bad_content.append(value_from)
-                    bad_relations.append(relation.Title())
+                    self._bad_content.add(value_from)
+                    self._bad_relations.add(relation.Title())
 
-        self.graph_res = graph
-        if bad_relations:
-            return self.brokenRelationMessage(bad_content, bad_relations)
-        return ""
+        return self._graph
+
 
 class ToolGraph(BaseGraph):
     """ Draw a graph for portal_relations
     """
 
-    def markBrokenRelations(self):
-        """ Construct graph and return message with info about broken
-        relations for ToolGraph if any errors are found
+    @property
+    def graph(self):
+        """ Construct graph and mark broken relations if any
         """
-        bad_relations = []
-        bad_content = []
-        bad_rel = ""
+        if self._graph is not None:
+            return self._graph
 
-        graph = PyGraph()
-        tool = queryAdapter(self.context, IToolAccessor)
-        types = tool.types(proxy=False)
-        for ctype in types:
+        self._graph = PyGraph()
+
+        xtool = queryAdapter(self.context, IToolAccessor)
+        typesIds = set()
+        for ctype in xtool.types(proxy=False):
+            typesIds.add(ctype.getId())
             node = queryAdapter(ctype, INode)
-            graph.add_node(node())
+            self._graph.add_node(node())
 
-        relations = tool.relations(proxy=False)
-        for relation in relations:
-            edge = queryAdapter(relation, IEdge)
-            res = edge()
-            if res:
-                graph.add_edge(res)
-                continue
+        for relation in xtool.relations(proxy=False):
+            field = relation.getField('to')
+            value_from = field.getAccessor(relation)()
+
+            field = relation.getField('from')
+            value_to = field.getAccessor(relation)()
+
+            edge = queryAdapter(relation, IEdge)()
+            if edge:
+                self._graph.add_edge(edge)
             else:
-                # if no result then check which relation id is missing
-                from_rel = relation['from']
-                to_rel = relation['to']
-                pr_from = self.pt_relations.get(from_rel)
-                pr_to = self.pt_relations.get(to_rel)
-                if not pr_from:
-                    bad_rel = from_rel
-                if not pr_to:
-                    bad_rel = to_rel
-                if bad_rel and bad_rel not in bad_content:
-                    bad_content.append(bad_rel)
-                bad_relations.append(relation.Title())
+                self._bad_relations.add(relation.Title())
+                if value_from not in typesIds:
+                    self._bad_content.add(value_from)
+                if value_to not in typesIds:
+                    self._bad_content.add(value_to)
 
-        self.graph_res = graph
-        if bad_relations:
-            return self.brokenRelationMessage(bad_content, bad_relations)
-        return ""
-
-    def dot(self):
-        """ Return dotted graph
-        """
-        return self.graph.to_string()
+        return self._graph
