@@ -5,12 +5,17 @@
 
 <body>
 
-<div metal:fill-slot="content-core">
+<div metal:fill-slot="content-core" tal:define="
+  graph nocall:here/@@graph.json;
+  data python:graph(setHeader=False);
+  bad_relations python:graph.bad_relations;
+  bad_content python:graph.bad_content;
+  ">
 
   <metal:relationerror use-macro="context/eea_relations_macros/macros/errors" />
 
   <div class="eea-relations">
-    <div class="graph" id="eea-relations-graph" data-height="400"></div>
+    <div class="graph" id="eea-relations-graph" data-height="400" tal:attributes="data-graph data"></div>
   </div>
 
 </div>
