@@ -6,15 +6,14 @@
       <th style="width: 20px"></th>
     </tr>
   </thead>
-  <tbody>
+  <tbody tal:define="bad_relations bad_relations | options/bad_relations | python: []">
     <tal:ctype repeat="brain python:view.relations">
     <tr tal:define="
       odd repeat/brain/even;
       css python:odd and 'odd' or 'even';
       url python:brain.getURL();
       title python:brain.Title;
-      doc python:brain.getObject();
-      bad_relations bad_relations|here/@@graph.png/markBrokenRelations"
+      doc python:brain.getObject();"
       tal:attributes="class css">
       <td>
         <span class="visualIcon contenttype-eeapossiblerelation">
@@ -27,9 +26,9 @@
           <span tal:define="field python:doc.getField('required_for');
             value python:field.getAccessor(doc)();"
             tal:condition="value" class="fieldRequiredFor"> </span>
-            <span tal:condition="python: bad_relations and title in bad_relations['relations']"><strong i18n:translate="" style="color:red;">Broken Relation</strong></span>
+            <span tal:condition="python: bad_relations and title in bad_relations"><strong i18n:translate="" style="color:red;">Broken Relation</strong></span>
           <br/>
-          <span i18n:translate="">forward label:</span>&nbsp; 
+          <span i18n:translate="">forward label:</span>&nbsp;
           <span tal:define="field python:doc.getField('forward_label');
             value python:field.getAccessor(doc)();"
             tal:condition="value" tal:content="value"> </span>
