@@ -8,7 +8,14 @@
 
 <body>
 
-<div metal:fill-slot="content-core">
+<div metal:fill-slot="content-core" tal:define="
+    graph nocall:here/@@graph.json;
+    data python:graph(setHeader=False);
+    bad_relations python:graph.bad_relations;
+    bad_content python:graph.bad_content;
+    contenttypes nocall:here/@@contenttypes.html;
+    relations nocall:here/@@relations.html;
+    ">
 
 <metal:relationerror use-macro="context/eea_relations_macros/macros/errors">
 
@@ -16,7 +23,7 @@
 
   <div class="eea-relations">
     <div class="wrapper">
-      <div class="graph" id="eea-relations-graph" data-height="600"></div>
+      <div class="graph" id="eea-relations-graph" data-height="600" tal:attributes="data-graph data"></div>
 
       <div class="eea-portalrelations-menu">
         <a href="badrelations.html"
@@ -28,11 +35,11 @@
     </div>
 
     <div class="left">
-      <tal:viewlet replace="structure here/@@contenttypes.html" />
+      <tal:viewlet replace="structure python:contenttypes(bad_relations=bad_relations, bad_content=bad_content)" />
     </div>
 
     <div class="right">
-      <tal:viewlet replace="structure here/@@relations.html" />
+      <tal:viewlet replace="structure python:relations(bad_relations=bad_relations, bad_content=bad_content)" />
     </div>
 
   </div>
