@@ -1,20 +1,22 @@
-<metal:relationsmacros define-macro="errors" tal:define="bad_relations here/@@graph.png/markBrokenRelations" >
-    <dl class="portalMessage error" tal:condition="bad_relations"  id="bad_relations">
-        <tal:defines define="content bad_relations/content; relations bad_relations/relations">
-            <dt i18n:translate="">Error</dt>
-            <dd style="float: left;">
-            <span i18n:translate="">The following relations are broken:</span>
-            <ul>
-                <li tal:repeat="item relations" tal:content="item" />
-            </ul>
-            <span i18n:translate="">because of the following broken or missing EEARelationsContentTypes:</span>
-            <ul>
-                <li tal:repeat="item content" tal:content="item" />
-            </ul>
-            </dd>
-        </tal:defines>
-        <dd style="clear:both; height:0; padding:0">&nbsp;</dd>
-        </dl>
+<metal:relationsmacros define-macro="errors" tal:define="
+  bad_content bad_content | python: [];
+  bad_relations bad_relations | python:[]" >
 
-        <metal:body define-slot="body" /> 
+  <dl class="portalMessage error" tal:condition="bad_relations"  id="bad_relations">
+    <dt i18n:translate="">Error</dt>
+    <dd style="float: left;">
+      <span i18n:translate="">The following relations are broken:</span>
+      <ul>
+        <li tal:repeat="item bad_relations" tal:content="item" />
+      </ul>
+      <span i18n:translate="">because of the following broken or missing EEARelationsContentTypes:</span>
+      <ul>
+        <li tal:repeat="item bad_content" tal:content="item" />
+      </ul>
+    </dd>
+    <dd style="clear:both; height:0; padding:0">&nbsp;</dd>
+  </dl>
+
+  <metal:body define-slot="body" />
+
 </metal:relationsmacros>
